<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/fragment_toolbar_settings"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <com.maxcriser.emergencycalls.view.labels.TextViewRobotoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/popular"
                            android:textColor="@color/text_toolbar"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="8dp"
                                android:src="@drawable/ic_library_books_black_24dp"/>

                            <TextView
                                android:onClick="onHowMakeCallClicked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:padding="8dp"
                                android:text="@string/how_to_make_a_call_to_the_rescue_service"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"/>
                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="48dp"
                            android:background="#dadada"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="8dp"
                                android:src="@drawable/ic_library_books_black_24dp"/>

                            <TextView
                                android:onClick="onSendingClicked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:padding="8dp"
                                android:text="@string/sending_a_message"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:id="@+id/textView3"/>
                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="48dp"
                            android:background="#dadada"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="8dp"
                                android:src="@drawable/ic_library_books_black_24dp"/>

                            <TextView
                                android:onClick="onAttachClicked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:padding="8dp"
                                android:text="@string/attaching_coordinates_to_a_message"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"/>

                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="48dp"
                            android:background="#dadada"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="8dp"
                                android:src="@drawable/ic_library_books_black_24dp"/>

                            <TextView
                                android:onClick="onPossibleClicked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:padding="8dp"
                                android:text="@string/possible_problems_with_determining_your_current_location"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"/>

                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#dadada"/>

                        <com.maxcriser.emergencycalls.view.labels.TextViewRobotoMedium
                            android:onClick="onBrowseClicked"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:gravity="center|start"
                            android:text="@string/browse_all_articles"
                            android:textColor="#3e87ee"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="6dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_announcement_black_24dp"/>

                        <TextView
                            android:onClick="onFeedbackClicked"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:text="@string/send_feedback"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:id="@+id/textView2"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>